# emojicpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/emojicpp/: emoji.hpp
src/: emoji.cpp  emoji.gperf  header.gperf
tests/: CMakeLists.txt  parserWorks.cpp
